--- a/templates/booking.html
+++ b/templates/booking.html
@@ -5,6 +5,10 @@
     <title>Booking for {{competition['name']}} || GUDLFT</title>
 </head>
 <body>
+    <nav>
+      <a href="{{ url_for('pointsBoard') }}">Tableau des points</a>
+      <a href="{{url_for('logout')}}">Logout</a>
+    </nav>
     <h2>{{competition['name']}}</h2>
     Places available: {{competition['numberOfPlaces']}}
     {% with messages = get_flashed_messages() %}
