--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,8 +5,13 @@
     <title>Summary | GUDLFT Registration</title>
 </head>
 <body>
-        <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
-
+    <div class="navbar">
+        <nav>
+            <a href="{{ url_for('pointsBoard') }}">Tableau des points</a>
+            <a href="{{url_for('logout')}}">Logout</a>
+        </nav>
+    </div>
+    <h2>Welcome, {{club['email']}} </h2>
     {% with messages = get_flashed_messages()%}
     {% if messages %}
         <ul>
