Added pointsBoard route to integration test.

--- a/templates/booking.html
+++ b/templates/booking.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <nav>
-      <a href="{{ url_for('pointsBoard') }}">Tableau des points</a>
+      <a href="{{ url_for('pointsBoard') }}">Points Board</a>
       <a href="{{url_for('logout')}}">Logout</a>
     </nav>
     <h2>{{competition['name']}}</h2>
