--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="navbar">
       <nav>
-          <a href="{{ url_for('pointsBoard') }}">Tableau des points</a>
+          <a href="{{ url_for('pointsBoard') }}">Points Board</a>
       </nav>
     </div>
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
