--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -7,7 +7,7 @@
 <body>
     <div class="navbar">
         <nav>
-            <a href="{{ url_for('pointsBoard') }}">Tableau des points</a>
+            <a href="{{ url_for('pointsBoard') }}">Points Board</a>
             <a href="{{url_for('logout')}}">Logout</a>
         </nav>
     </div>
